root index and routing started

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 </head>
 <body ng-app="fistOfFive" ng-controller="GlobalController">
 
+	<div>TEST</div>
+
 <div ng-view autoscroll="true"></div>
 
 </body>
