--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,3 +1,6 @@
+
+{{test}}
+
 <div class="form-box" id="login-box">
   <div class="sign-in-button">                                     
       <button type="submit" ng-click="authenticateUser()" class="btn bg-red btn-block"><i class="fa fa-google-plus"></i> Sign in with Google
